--- a/5_querying-many-sensitive-words-archive.ipynb
+++ b/5_querying-many-sensitive-words-archive.ipynb
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test Google at 300 / hour for one hour"
+    "## Test at 300 / hour for two hours"
    ]
   },
   {
