--- a/5_querying-many-sensitive-words-archive.ipynb
+++ b/5_querying-many-sensitive-words-archive.ipynb
@@ -16,16 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +93,7 @@
        "4              蓝衣女记者  blue-clothed female reporter"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
        "3497"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,11 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "english_terms = list(df.dropna().english)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"termlist.json\", 'w') as f:\n",
+    "    f.write(json.dumps(english_terms))"
    ]
   },
   {
@@ -166,8 +177,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
-    "import random\n",
-    "import json"
+    "import random"
    ]
   },
   {
