API testing and image hashing

--- a/6_firewall-api.ipynb
+++ b/6_firewall-api.ipynb
@@ -156,6 +156,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Looks like they're all working, and the endpoints that weren't working were breaking because raw image data is being stored in the Postgres DB and the queries get too big fast."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### POST endpoints"
    ]
   },
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,6 +620,48 @@
     "    r = requests.get(BASE_URL + 'images/search_id/' + str(search_id))\n",
     "    return r.json()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'image_id': 197468,\n",
+       "  'search_id': 5588,\n",
+       "  'image_search_engine': 'test',\n",
+       "  'image_href': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
+       "  'image_rank': '0',\n",
+       "  'image_mime_type': None,\n",
+       "  'image_data': None,\n",
+       "  'wordpress_attachment_post_id': None,\n",
+       "  'wordpress_attachment_file_path': None}]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_images(last_id_used)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The POST endpoints are now working as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
