note about unfinished tests

--- a/9_wordpress-node-APIs.ipynb
+++ b/9_wordpress-node-APIs.ipynb
@@ -621,11 +621,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This is currently infeasible given that the Node API returns raw image data--I'd have to download essentially the entire contents of the multi-GB DB. I'm going to investigate removing that from results since we're not going to be using it soon anyway."
+   ]
   },
   {
    "cell_type": "markdown",
