rerunning tests on API

--- a/6_firewall-api.ipynb
+++ b/6_firewall-api.ipynb
@@ -85,54 +85,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "searches                                             6.1 seconds 200\n",
-      "\t first query info: football\n",
+      "searches                                             0.4 seconds 200\n",
+      "\t first query info: test\n",
       "searches/search_id/1                                 0.2 seconds 200\n",
       "\t first query info: football\n",
-      "searches/images                                      4.2 seconds 200\n",
-      "\t first query info: chinese feminist activists\n",
-      "searches/images/search_id/1                          1.7 seconds 200\n",
+      "searches/images                                      0.5 seconds 200\n",
+      "\t first query info: test\n",
+      "searches/images/search_id/1                          0.4 seconds 200\n",
       "\t first query info: football\n",
-      "searches/votes                                       7.9 seconds 200\n",
-      "\t first query info: blond jenny, Bad Translation\n",
-      "searches/votes/search_id/1                           0.3 seconds 200\n",
-      "searches/votes/vote_id/1                             1.9 seconds 200\n",
+      "searches/votes                                       0.2 seconds 500\n",
+      "searches/votes/search_id/1                           0.2 seconds 200\n",
+      "searches/votes/vote_id/1                             2.2 seconds 200\n",
       "\t first query info: blond jenny artist, Censored\n",
-      "searches/votes/censored_searches                     1.4 seconds 200\n",
+      "searches/votes/censored_searches                     1.5 seconds 200\n",
       "\t first query info: shen yun\n",
-      "searches/votes/uncensored_searches                   1.4 seconds 200\n",
+      "searches/votes/uncensored_searches                   1.2 seconds 200\n",
       "\t first query info: black jesus\n",
       "searches/votes/bad_translation_searches              1.2 seconds 200\n",
       "\t first query info: history of women's suffrage\n",
-      "searches/votes/good_translation_searches             2.8 seconds 200\n",
+      "searches/votes/good_translation_searches             3.0 seconds 200\n",
       "\t first query info: venezuela\n",
-      "searches/votes/nsfw_searches                         1.7 seconds 200\n",
+      "searches/votes/nsfw_searches                         1.4 seconds 200\n",
       "\t first query info: black jesus\n",
-      "searches/votes/wtf_searches                          0.6 seconds 200\n",
+      "searches/votes/wtf_searches                          0.4 seconds 200\n",
       "\t first query info: history of women's suffrage\n",
-      "searches/votecounts                                  6.9 seconds 200\n",
+      "searches/votecounts                                  7.9 seconds 200\n",
       "\t first query info: venezuela\n",
       "searches/1/votecounts                                0.2 seconds 200\n",
       "\t first query info: football\n",
-      "searches/votecounts/images                           1.8 seconds 200\n",
+      "searches/votecounts/images                           9.5 seconds 200\n",
       "\t first query info: football\n",
-      "searches/1/votecounts/images                         1.1 seconds 200\n",
+      "searches/1/votecounts/images                         0.4 seconds 200\n",
       "\t first query info: football\n",
-      "images                                               1.3 seconds 200\n",
-      "images/search_id/1                                   1.0 seconds 200\n",
-      "images/censored_searches                             1.1 seconds 200\n",
-      "images/uncensored_searches                           0.9 seconds 200\n",
-      "images/bad_translation_searches                      0.9 seconds 200\n",
-      "images/good_translation_searches                     1.2 seconds 200\n",
-      "images/nsfw_searches                                 2.1 seconds 200\n",
-      "images/wtf_searches                                  0.2 seconds 200\n"
+      "images                                               0.3 seconds 200\n",
+      "images/search_id/1                                   0.2 seconds 200\n",
+      "images/censored_searches                             0.3 seconds 200\n",
+      "images/uncensored_searches                           0.3 seconds 200\n",
+      "images/bad_translation_searches                      1.3 seconds 200\n",
+      "images/good_translation_searches                     0.4 seconds 200\n",
+      "images/nsfw_searches                                 0.4 seconds 200\n",
+      "images/wtf_searches                                  0.9 seconds 200\n"
      ]
     }
    ],
@@ -188,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1610179839.702349"
+       "1610716337.632558"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +244,7 @@
        "  'wordpress_search_result_post_slug': 'football-1454979377'}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search 5588 in DB\n"
+      "search 5590 in DB\n"
      ]
     }
    ],
@@ -323,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "could not find 5589\n"
+      "could not find 5591\n"
      ]
     },
     {
@@ -339,7 +338,7 @@
        "False"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,23 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search 5589 in DB\n"
+      "search 5591 in DB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'search_id': 5589}]"
+       "[{'search_id': 5591}]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +470,7 @@
        "  'wordpress_search_result_post_slug': 'ceo-1455141099'}]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +490,7 @@
        "[]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +510,7 @@
        "<Response [201]>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,20 +521,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'vote_name': 'Censored',\n",
-       "  'vote_serial': 6102,\n",
+       "  'vote_serial': 6103,\n",
        "  'vote_id': 1,\n",
-       "  'search_id': 5588,\n",
-       "  'vote_timestamp': '1610183085',\n",
+       "  'search_id': 5590,\n",
+       "  'vote_timestamp': '1610716340',\n",
        "  'vote_client_name': 'rowan_tests',\n",
        "  'vote_ip_address': '192.168.0.1',\n",
-       "  'search_timestamp': '1610181394',\n",
+       "  'search_timestamp': '1610716337',\n",
        "  'search_location': 'new_york_city',\n",
        "  'search_ip_address': None,\n",
        "  'search_client_name': 'rowan_scraper_tests',\n",
@@ -558,7 +557,7 @@
        "  'wordpress_search_result_post_slug': None}]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +600,7 @@
        "[]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,24 +622,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'image_id': 197468,\n",
-       "  'search_id': 5588,\n",
+       "[{'image_id': 197469,\n",
        "  'image_search_engine': 'test',\n",
        "  'image_href': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
        "  'image_rank': '0',\n",
        "  'image_mime_type': None,\n",
-       "  'image_data': None,\n",
        "  'wordpress_attachment_post_id': None,\n",
        "  'wordpress_attachment_file_path': None}]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
