--- a/6_firewall-api.ipynb
+++ b/6_firewall-api.ipynb
@@ -25,11 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_URL = 'http://159.89.80.47/'"
+    "BASE_URL = 'http://159.89.80.47/'\n",
+    "# BASE_URL = 'http://api.firewallcafe.com/'"
    ]
   },
   {
@@ -85,52 +86,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "searches                                             0.4 seconds 200\n",
-      "\t first query info: test\n",
-      "searches/search_id/1                                 0.2 seconds 200\n",
+      "searches                                             1.3 seconds 200\n",
+      "\t first query info: obama\n",
+      "searches/search_id/1                                 0.5 seconds 200\n",
       "\t first query info: football\n",
-      "searches/images                                      0.5 seconds 200\n",
-      "\t first query info: test\n",
-      "searches/images/search_id/1                          0.4 seconds 200\n",
+      "searches/images                                      1.4 seconds 200\n",
+      "\t first query info: coronavirus\n",
+      "searches/images/search_id/1                          0.7 seconds 200\n",
       "\t first query info: football\n",
-      "searches/votes                                       0.2 seconds 500\n",
-      "searches/votes/search_id/1                           0.2 seconds 200\n",
-      "searches/votes/vote_id/1                             2.2 seconds 200\n",
+      "searches/votes                                       0.5 seconds 500\n",
+      "searches/votes/search_id/1                           0.6 seconds 200\n",
+      "searches/votes/vote_id/1                             3.2 seconds 200\n",
       "\t first query info: blond jenny artist, Censored\n",
-      "searches/votes/censored_searches                     1.5 seconds 200\n",
+      "searches/votes/censored_searches                     2.7 seconds 200\n",
       "\t first query info: shen yun\n",
-      "searches/votes/uncensored_searches                   1.2 seconds 200\n",
+      "searches/votes/uncensored_searches                   2.8 seconds 200\n",
       "\t first query info: black jesus\n",
-      "searches/votes/bad_translation_searches              1.2 seconds 200\n",
+      "searches/votes/bad_translation_searches              2.7 seconds 200\n",
       "\t first query info: history of women's suffrage\n",
-      "searches/votes/good_translation_searches             3.0 seconds 200\n",
+      "searches/votes/good_translation_searches             6.7 seconds 200\n",
       "\t first query info: venezuela\n",
-      "searches/votes/nsfw_searches                         1.4 seconds 200\n",
+      "searches/votes/nsfw_searches                         3.5 seconds 200\n",
       "\t first query info: black jesus\n",
-      "searches/votes/wtf_searches                          0.4 seconds 200\n",
+      "searches/votes/wtf_searches                          0.8 seconds 200\n",
       "\t first query info: history of women's suffrage\n",
-      "searches/votecounts                                  7.9 seconds 200\n",
+      "searches/votecounts                                 10.2 seconds 200\n",
       "\t first query info: venezuela\n",
-      "searches/1/votecounts                                0.2 seconds 200\n",
+      "searches/1/votecounts                                0.5 seconds 200\n",
       "\t first query info: football\n",
-      "searches/votecounts/images                           9.5 seconds 200\n",
+      "searches/votecounts/images                          14.8 seconds 200\n",
       "\t first query info: football\n",
-      "searches/1/votecounts/images                         0.4 seconds 200\n",
+      "searches/1/votecounts/images                         0.9 seconds 200\n",
       "\t first query info: football\n",
-      "images                                               0.3 seconds 200\n",
-      "images/search_id/1                                   0.2 seconds 200\n",
-      "images/censored_searches                             0.3 seconds 200\n",
-      "images/uncensored_searches                           0.3 seconds 200\n",
-      "images/bad_translation_searches                      1.3 seconds 200\n",
-      "images/good_translation_searches                     0.4 seconds 200\n",
-      "images/nsfw_searches                                 0.4 seconds 200\n",
+      "images                                               0.8 seconds 200\n",
+      "images/search_id/1                                   0.6 seconds 200\n",
+      "images/censored_searches                             0.8 seconds 200\n",
+      "images/uncensored_searches                           0.6 seconds 200\n",
+      "images/bad_translation_searches                      1.0 seconds 200\n",
+      "images/good_translation_searches                     0.6 seconds 200\n",
+      "images/nsfw_searches                                 0.6 seconds 200\n",
       "images/wtf_searches                                  0.9 seconds 200\n"
      ]
     }
@@ -193,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "1610716337.632558"
+       "1611914576.87813"
       ]
      },
      "execution_count": 7,
@@ -296,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search 5590 in DB\n"
+      "search 5739 in DB\n"
      ]
     }
    ],
@@ -329,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "could not find 5591\n"
+      "could not find 5740\n"
      ]
     },
     {
@@ -356,13 +357,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search 5591 in DB\n"
+      "search 5740 in DB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'search_id': 5591}]"
+       "[{'search_id': 5740}]"
       ]
      },
      "execution_count": 12,
@@ -528,13 +529,13 @@
      "data": {
       "text/plain": [
        "[{'vote_name': 'Censored',\n",
-       "  'vote_serial': 6103,\n",
+       "  'vote_serial': 6102,\n",
        "  'vote_id': 1,\n",
-       "  'search_id': 5590,\n",
-       "  'vote_timestamp': '1610716340',\n",
+       "  'search_id': 5739,\n",
+       "  'vote_timestamp': '1611914583',\n",
        "  'vote_client_name': 'rowan_tests',\n",
        "  'vote_ip_address': '192.168.0.1',\n",
-       "  'search_timestamp': '1610716337',\n",
+       "  'search_timestamp': '1611914577',\n",
        "  'search_location': 'new_york_city',\n",
        "  'search_ip_address': None,\n",
        "  'search_client_name': 'rowan_scraper_tests',\n",
@@ -628,7 +629,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'image_id': 197469,\n",
+       "[{'image_id': 197468,\n",
        "  'image_search_engine': 'test',\n",
        "  'image_href': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
        "  'image_rank': '0',\n",
@@ -651,6 +652,85 @@
    "metadata": {},
    "source": [
     "The POST endpoints are now working as well"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure that pagination is working correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paginated_endpoints = [\n",
+    "    'searches',\n",
+    "    'searches/images',\n",
+    "    'searches/votes',\n",
+    "    'searches/votecounts/images',\n",
+    "    'images',\n",
+    "    'images/type/censored_searches',\n",
+    "    'images/type/uncensored_searches',\n",
+    "    'images/type/bad_translation_searches',\n",
+    "    'images/type/good_translation_searches',\n",
+    "    'images/type/nsfw_searches',\n",
+    "    'images/type/wtf_searches',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://159.89.80.47/\n",
+      "  searches\n",
+      "  searches/images\n",
+      "  searches/votes\n",
+      "  searches/votecounts/images\n",
+      "  images\n",
+      "  images/type/censored_searches\n",
+      "  images/type/uncensored_searches\n",
+      "  images/type/bad_translation_searches\n",
+      "  images/type/good_translation_searches\n",
+      "  images/type/nsfw_searches\n",
+      "  images/type/wtf_searches\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(BASE_URL)\n",
+    "for endpoint in paginated_endpoints:\n",
+    "#     try:\n",
+    "    j1 = requests.get(f'{BASE_URL}{endpoint}?page_size=1&page=1').json()\n",
+    "    j2 = requests.get(f'{BASE_URL}{endpoint}?page_size=1&page=100').json()\n",
+    "    try:\n",
+    "        j1 = j1[0]\n",
+    "        j2 = j2[0]\n",
+    "    except:\n",
+    "        print(' ', endpoint, j2)\n",
+    "#         break\n",
+    "    identifier1 = ''\n",
+    "    identifier2 = ''\n",
+    "    if 'search_id' in j1:\n",
+    "        identifier1 += str(j1['search_id'])\n",
+    "        identifier2 += str(j2['search_id'])\n",
+    "    if 'image_id' in j1:\n",
+    "        identifier1 += str(j1['image_id'])\n",
+    "        identifier2 += str(j2['image_id'])\n",
+    "    if identifier1 == identifier2:\n",
+    "        print('x', endpoint)\n",
+    "#         break\n",
+    "    else:\n",
+    "        print(' ', endpoint)"
    ]
   },
   {
