--- a/10_transfer-images-http.ipynb
+++ b/10_transfer-images-http.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## transferring images from the Postgres DB into the Digital Ocean Space\n",
+    "## Transferring images from the Postgres DB into the Digital Ocean Space\n",
     "\n",
     "edit: this ends up being throttled somehow (ISP issues?). Deprecating this notebook in favor of getting the images from a database dump in the next notebook.\n",
     "\n",
@@ -42,10 +42,14 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
     "import requests\n",
     "\n",
     "# base = 'http://159.89.80.47'\n",
-    "base = 'http://api.firewallcafe.com'"
+    "base = 'http://api.firewallcafe.com'\n",
+    "folder = 'images'\n",
+    "\n",
+    "os.mkdir(folder)"
    ]
   },
   {
@@ -77,13 +81,13 @@
     {
      "data": {
       "text/plain": [
-       "{'image_id': 197269,\n",
-       " 'image_search_engine': 'google',\n",
-       " 'image_href': 'https://cdn.getyourguide.com/img/tour_img-1221220-148.jpg',\n",
-       " 'image_rank': '02',\n",
-       " 'image_mime_type': 'image/jpeg',\n",
-       " 'wordpress_attachment_post_id': 282265,\n",
-       " 'wordpress_attachment_file_path': '/wp-content/uploads/2020/02/26/282263/google-1582773252-02.jpg'}"
+       "{'image_id': 626520,\n",
+       " 'image_search_engine': 'baidu',\n",
+       " 'image_href': 'https://firewall-cafe-space.nyc3.digitaloceanspaces.com/images/hashed/de2ece85a092791e.jpg',\n",
+       " 'image_rank': '1',\n",
+       " 'image_mime_type': None,\n",
+       " 'wordpress_attachment_post_id': None,\n",
+       " 'wordpress_attachment_file_path': None}"
       ]
      },
      "execution_count": 3,
@@ -139,22 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'google_com_test_worked'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
+    "import imagehash\n",
+    "\n",
+    "def hash_image(img):\n",
+    "    return imagehash.phash(fname)\n",
+    "\n",
     "def image_fname(url):\n",
     "#     print(url)\n",
     "    def reduce(char):\n",
@@ -281,7 +279,7 @@
     "            break\n",
     "        \n",
     "        storage.increment_count()\n",
-    "        fname = image_fname(url)\n",
+    "#         fname = image_fname(url)\n",
     "        \n",
     "        # save image in temp folder\n",
     "        try:\n",
@@ -292,17 +290,18 @@
     "        try:\n",
     "            in_memory_file = io.BytesIO(r.content)\n",
     "            im = Image.open(in_memory_file)\n",
+    "            fname = hash_image(im)\n",
     "        except Exception as e:\n",
     "            storage.add_failure(image_id, url, e)\n",
     "            continue\n",
     "#         print(os.pwd(), fname, ext)\n",
     "        try:\n",
     "            ext = '.jpg'\n",
-    "            im.save('temp/' + fname + ext)\n",
+    "            im.save(folder + '/' + fname + ext)\n",
     "        except:\n",
     "            try:\n",
     "                ext = '.' + im.format.lower()\n",
-    "                im.save('temp/' + fname + ext)\n",
+    "                im.save(folder + '/' + fname + ext)\n",
     "            except Exception as e:\n",
     "                storage.add_failure(image_id, url, e)\n",
     "        if random.randint(0,100) == 42:\n",
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +363,15 @@
       "done with /image queries\n",
       "telling threads to stop\n",
       "waiting\n",
-      "x x xxxx x x x x x x  x x x x x x x x x x  x x x x x x x x x x x x x x x x x x x x x x x x  x x x x "
+      "processing 72 took 0.2 minutes. 1.4% failure rate & 1 failures, 0.2 s per\n",
+      "processing 117 took 0.3 minutes. 6.0% failure rate & 7 failures, 0.1 s per\n",
+      "processing 296 took 0.6 minutes. 10.8% failure rate & 32 failures, 0.1 s per\n",
+      "processing 446 took 1.1 minutes. 11.9% failure rate & 53 failures, 0.1 s per\n",
+      "processing 701 took 1.5 minutes. 11.3% failure rate & 79 failures, 0.1 s per\n",
+      "processing 740 took 1.6 minutes. 11.5% failure rate & 85 failures, 0.1 s per\n",
+      "processing 769 took 1.6 minutes. 11.3% failure rate & 87 failures, 0.1 s per\n",
+      "processing 782 took 1.7 minutes. 11.4% failure rate & 89 failures, 0.1 s per\n",
+      "x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x "
      ]
     }
    ],
@@ -381,8 +388,8 @@
     "\n",
     "# iterating over all images in DB\n",
     "for j in image_pages:\n",
-    "    print(\"skipping image downloading\")\n",
-    "    break\n",
+    "#     print(\"skipping image downloading\")\n",
+    "#     break\n",
     "    for img in j:\n",
     "        count += 1\n",
     "        # make filename from url\n",
@@ -394,10 +401,9 @@
     "            continue\n",
     "        # put the url into the queue for the workers\n",
     "        q.put((img['image_id'], url))\n",
-    "        \n",
+    "    break\n",
     "        # upload to DO manually\n",
     "#         url = write_image_to_do('temp/img'+ext, 'images/url_based/'+fname+ext)\n",
-    "\n",
     "print(\"\\ndone with /image queries\\ntelling threads to stop\")\n",
     "for i in range(num_worker_threads):\n",
     "    q.put((None,None))\n",
@@ -408,39 +414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-6a6966c9f590>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstorage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_status\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-10-eb7e0dde9f19>\u001b[0m in \u001b[0;36mprint_status\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             print(f\"processing {self.count} took {round((time.time()-self.start)/60, 1)} minutes. \\\n\u001b[1;32m---> 26\u001b[1;33m {round(100*(len(self.failures)/self.count), 1)}% failure rate & {len(self.failures)} failures, {round((time.time()-self.start)/self.count, 1)} s per\")\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0mstorage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStorage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "storage.print_status()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"ok\")"
    ]
@@ -454,46 +439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'image_id': 197468,\n",
-       " 'image_search_engine': 'test',\n",
-       " 'image_href': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
-       " 'image_rank': '0',\n",
-       " 'image_mime_type': None,\n",
-       " 'wordpress_attachment_post_id': None,\n",
-       " 'wordpress_attachment_file_path': None}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_pages[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'pic2_zhimg_com_v2_631342d113ecb4d07e1b6b09bb1cda91_1200x500'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fn = image_fname(image_pages[10][5]['image_href'])\n",
     "fn"
@@ -501,36 +458,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = set(os.listdir('temp'))"
+    "images = set(os.listdir(folder))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f'{fn}.jpg' in images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,77 +502,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05311550151975684"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(non_jpgs)/len(images)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "81.35 % found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(round(100*found_count/(found_count+len(missing)), 2), '% found')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "161522"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "found_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36946"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(missing)"
    ]
