--- a/11_extract-images-postgres-dump.ipynb
+++ b/11_extract-images-postgres-dump.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Do not use\n",
+    "\n",
+    "We're going to use the slower but more reliable method in notebook 10.\n",
+    "\n",
     "## writing out all binary blobs to image files\n",
     "\n",
     "Starting from this tutorial about reading out blobs in postgres: https://www.postgresqltutorial.com/postgresql-python/blob/\n",
