--- a/8_image-hashing.ipynb
+++ b/8_image-hashing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,6 +253,126 @@
     "fnames = ['thumbnails/'+fname for fname in os.listdir('thumbnails')]\n",
     "ipyplot.plot_images(fnames, img_width=200)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Issues with GIF images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A large proportion (all?) of gif images hashes to a single value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gif_urls = [\n",
+    "'https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fss2.meipian.me%2Fusers%2F12284226%2F76d53a55fb2f476193fc5e20325ad81b.jpg%3Fmeipian-raw%2Fbucket%2Fivwen%2Fkey%2FdXNlcnMvMTIyODQyMjYvNzZkNTNhNTVmYjJmNDc2MTkzZmM1ZTIwMzI1YWQ4MWIuanBn%2Fsign%2Fc519d0f9355c00cec70dc9&refer=http%3A%2F%2Fss2.meipian.me&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=7e26e361ae8fb134f18bc1eb50e6a303',\n",
+    "'https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fwww.adaofu.cn%2Fuploadfiles%2F2017%2F08%2F201708281327172717.png&refer=http%3A%2F%2Fwww.adaofu.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=64fdcacdc25150b7e62d5ebde0e5c77d',\n",
+    "'https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fss2.meipian.me%2Fusers%2F12284226%2Fe3bb9de3217f4a7792230b2a2a2f82a2.jpg%3Fmeipian-raw%2Fbucket%2Fivwen%2Fkey%2FdXNlcnMvMTIyODQyMjYvZTNiYjlkZTMyMTdmNGE3NzkyMjMwYjJhMmEyZjgyYTIuanBn%2Fsign%2Fcfbd6195a767fc7b8b66cc&refer=http%3A%2F%2Fss2.meipian.me&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=d0e9143a910b2edb4a06dd561404190c',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"display: inline-block; width: 320px; vertical-align: top; text-align: center;\"><h4 style=\"font-size: 12px\">0</h4><h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 90%; word-wrap: break-word; white-space: normal;\">https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fss2.meipian.me%2Fusers%2F12284226%2F76d53a55fb2f476193fc5e20325ad81b.jpg%3Fmeipian-raw%2Fbucket%2Fivwen%2Fkey%2FdXNlcnMvMTIyODQyMjYvNzZkNTNhNTVmYjJmNDc2MTkzZmM1ZTIwMzI1YWQ4MWIuanBn%2Fsign%2Fc519d0f9355c00cec70dc9&refer=http%3A%2F%2Fss2.meipian.me&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=7e26e361ae8fb134f18bc1eb50e6a303</h4><img src=\"https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fss2.meipian.me%2Fusers%2F12284226%2F76d53a55fb2f476193fc5e20325ad81b.jpg%3Fmeipian-raw%2Fbucket%2Fivwen%2Fkey%2FdXNlcnMvMTIyODQyMjYvNzZkNTNhNTVmYjJmNDc2MTkzZmM1ZTIwMzI1YWQ4MWIuanBn%2Fsign%2Fc519d0f9355c00cec70dc9&refer=http%3A%2F%2Fss2.meipian.me&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=7e26e361ae8fb134f18bc1eb50e6a303\" style=\"margin: 1px; width: 300px; border: 2px solid #ddd;\"/></div><div style=\"display: inline-block; width: 320px; vertical-align: top; text-align: center;\"><h4 style=\"font-size: 12px\">1</h4><h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 90%; word-wrap: break-word; white-space: normal;\">https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fwww.adaofu.cn%2Fuploadfiles%2F2017%2F08%2F201708281327172717.png&refer=http%3A%2F%2Fwww.adaofu.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=64fdcacdc25150b7e62d5ebde0e5c77d</h4><img src=\"https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fwww.adaofu.cn%2Fuploadfiles%2F2017%2F08%2F201708281327172717.png&refer=http%3A%2F%2Fwww.adaofu.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=64fdcacdc25150b7e62d5ebde0e5c77d\" style=\"margin: 1px; width: 300px; border: 2px solid #ddd;\"/></div><div style=\"display: inline-block; width: 320px; vertical-align: top; text-align: center;\"><h4 style=\"font-size: 12px\">2</h4><h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 90%; word-wrap: break-word; white-space: normal;\">https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fss2.meipian.me%2Fusers%2F12284226%2Fe3bb9de3217f4a7792230b2a2a2f82a2.jpg%3Fmeipian-raw%2Fbucket%2Fivwen%2Fkey%2FdXNlcnMvMTIyODQyMjYvZTNiYjlkZTMyMTdmNGE3NzkyMjMwYjJhMmEyZjgyYTIuanBn%2Fsign%2Fcfbd6195a767fc7b8b66cc&refer=http%3A%2F%2Fss2.meipian.me&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=d0e9143a910b2edb4a06dd561404190c</h4><img src=\"https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fss2.meipian.me%2Fusers%2F12284226%2Fe3bb9de3217f4a7792230b2a2a2f82a2.jpg%3Fmeipian-raw%2Fbucket%2Fivwen%2Fkey%2FdXNlcnMvMTIyODQyMjYvZTNiYjlkZTMyMTdmNGE3NzkyMjMwYjJhMmEyZjgyYTIuanBn%2Fsign%2Fcfbd6195a767fc7b8b66cc&refer=http%3A%2F%2Fss2.meipian.me&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1617671552&t=d0e9143a910b2edb4a06dd561404190c\" style=\"margin: 1px; width: 300px; border: 2px solid #ddd;\"/></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ipyplot.plot_images(gif_urls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or, could this just be a case of Baidu returning lots of broken image links? Seems unlikely..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonbroken_gifs = [\n",
+    "    'https://media.giphy.com/media/lz9lPkqddgoec/giphy.gif',\n",
+    "    'https://media.giphy.com/media/c41LpTKOH6vZjNKOXa/giphy.gif'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"display: inline-block; width: 320px; vertical-align: top; text-align: center;\"><h4 style=\"font-size: 12px\">0</h4><h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 90%; word-wrap: break-word; white-space: normal;\">https://media.giphy.com/media/lz9lPkqddgoec/giphy.gif</h4><img src=\"https://media.giphy.com/media/lz9lPkqddgoec/giphy.gif\" style=\"margin: 1px; width: 300px; border: 2px solid #ddd;\"/></div><div style=\"display: inline-block; width: 320px; vertical-align: top; text-align: center;\"><h4 style=\"font-size: 12px\">1</h4><h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 90%; word-wrap: break-word; white-space: normal;\">https://media.giphy.com/media/c41LpTKOH6vZjNKOXa/giphy.gif</h4><img src=\"https://media.giphy.com/media/c41LpTKOH6vZjNKOXa/giphy.gif\" style=\"margin: 1px; width: 300px; border: 2px solid #ddd;\"/></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ipyplot.plot_images(nonbroken_gifs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('thumbnails/d23ccd810cdecd371a86e2cc5758e96e', 'c88721e2c239df75'),\n",
+       " ('thumbnails/836e6bd3136c3938d81a716aadc07d3f', 'e7e7682693994866')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fnames = [f'thumbnails/{request_and_write_image(url)}' for url in nonbroken_gifs]\n",
+    "sorted_by_hash = sorted([(fname,str(hash_image(fname))) for fname in fnames], key=lambda x: str(x[1]))\n",
+    "sorted_by_hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
