--- a/16_google-large-images.ipynb
+++ b/16_google-large-images.ipynb
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently this opens a web browser, which won't work on a server. We'll have to set up a headless browser and have it click through until it can download the larger image size."
+    "This'll probably be what we have to do if we need large images. Currently this opens a web browser, which won't work on a server. We'll have to set up a headless browser and have it click through until it can download the larger image size."
    ]
   }
  ],
