collecting all 95k images in one go

--- a/16_google-large-images.ipynb
+++ b/16_google-large-images.ipynb
@@ -8,15 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,22 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from lxml import html"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get('https://www.google.com/search?q=bunny&source=lnms&tbm=isch&sa=X&ved=2ahUKEwie44_AnqLpAhUhBWMBHUFGD90Q_AUoAXoECBUQAw&biw=1920&bih=947')"
+    "import requests\n",
+    "import random\n",
+    "from bs4 import BeautifulSoup\n",
+    "from lxml import html"
    ]
   },
   {
@@ -49,12 +32,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(r.text)"
+    "r = requests.get('https://www.google.com/search?q=bunny&source=lnms&tbm=isch&sa=X&ved=2ahUKEwie44_AnqLpAhUhBWMBHUFGD90Q_AUoAXoECBUQAw&biw=1920&bih=947')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +66,7 @@
        "[]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,23 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<table class=\"TxbwNb\"><tr><td><a href=\"/url?q=https://www.rd.com/list/cutest-bunnies/&amp;sa=U&amp;ved=2ahUKEwjkrpGD_rrvAhUdJjQIHY53AQ0QqoUBMAF6BAgPEAE&amp;usg=AOvVaw26r-8XU_H8nlU2JwV-6tgR\"><div class=\"RAyV4b\"><img alt=\"\" class=\"t0fcAb\" src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3ToLkgTspWAGrSpBX3OKSsv9snbS4P0kfr6TDsxNdlXsVUsc6UcnmqN4zSg&amp;s\"/></div></a></td></tr><tr><td><a href=\"/url?q=https://www.rd.com/list/cutest-bunnies/&amp;sa=U&amp;ved=2ahUKEwjkrpGD_rrvAhUdJjQIHY53AQ0Qr4kDMAF6BAgPEAI&amp;usg=AOvVaw3NfylQQlrgRC2UcjxNocVN\"><div class=\"Tor4Ec\"> <span class=\"qXLe6d x3G5ab\"> <span class=\"fYyStc\">Cutest Bunnies You'll Want...</span> </span> <span class=\"qXLe6d F9iS2e\"> <span class=\"fYyStc\">rd.com</span> </span> </div></a></td></tr></table>"
+       "<table class=\"TxbwNb\"><tr><td><a href=\"/url?q=https://www.youtube.com/watch%3Fv%3DLv4SQy_9VLI&amp;sa=U&amp;ved=2ahUKEwia1IDVlMjvAhUtIjQIHSGFBuwQqoUBMA96BAgFEAE&amp;usg=AOvVaw1jnAAg01Gs-B-BtHxzxv7A\"><div class=\"RAyV4b\"><img alt=\"\" class=\"t0fcAb\" src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEqjq0u6uWOlblRYGcAVPe9JY3B_7nnFIAFEWhRmDDG_jwbLTnhxZmqjZdcA&amp;s\"/></div></a></td></tr><tr><td><a href=\"/url?q=https://www.youtube.com/watch%3Fv%3DLv4SQy_9VLI&amp;sa=U&amp;ved=2ahUKEwia1IDVlMjvAhUtIjQIHSGFBuwQr4kDMA96BAgFEAI&amp;usg=AOvVaw31SXMsvoxRp5kkjagTD5uI\"><div class=\"Tor4Ec\"> <span class=\"qXLe6d x3G5ab\"> <span class=\"fYyStc\">Curious Baby Bunny -...</span> </span> <span class=\"qXLe6d F9iS2e\"> <span class=\"fYyStc\">youtube.com</span> </span> </div></a></td></tr></table>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dom_img = soup.find_all('img')[2]\n",
+    "dom_img = random.choice(soup.find_all('img'))\n",
     "dom_img.parent.parent.parent.parent.parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup.find(attrs={'class':'rg_i'})"
    ]
   },
   {
